Fixed spacing and other issues on homepage

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -3913,7 +3913,8 @@ figure.align-center figcaption {
   counter-reset: li;
   list-style-position: outside;
   margin: 0;
-  padding: 0 40px; }
+  padding: 0 40px;
+  padding-right: 0; }
   .home-banner-support__links li {
     display: inline-block;
     width: 100%;
@@ -3937,11 +3938,13 @@ figure.align-center figcaption {
     color: #007cbe;
     text-decoration: none; }
   @media (min-width: 769px) {
-    .home-banner-support__links li {
-      width: 29%;
-      float: left;
-      margin-left: 7%;
-      margin-bottom: 0; } }
+    .home-banner-support__links {
+      padding: 0 40px; }
+      .home-banner-support__links li {
+        width: 29%;
+        float: left;
+        margin-left: 7%;
+        margin-bottom: 0; } }
   @media (min-width: 1050px) {
     .home-banner-support__links {
       grid-column: 5/-1;
@@ -3995,7 +3998,7 @@ figure.align-center figcaption {
     font-weight: 500;
     font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
     font-size: 32px;
-    line-height: 1;
+    line-height: 1.25;
     letter-spacing: -0.6px;
     color: #052049;
     font-family: "GranjonLTW01-Roman", Garamond, "Times New Roman", serif;
@@ -4066,7 +4069,7 @@ figure.align-center figcaption {
   font-weight: 500;
   font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
   font-size: 32px;
-  line-height: 1;
+  line-height: 1.25;
   letter-spacing: -0.6px;
   color: #052049;
   margin-top: 20px;
@@ -4236,7 +4239,7 @@ figure.align-center figcaption {
   font-weight: 500;
   font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
   font-size: 32px;
-  line-height: 1;
+  line-height: 1.25;
   letter-spacing: -0.6px;
   color: #052049;
   margin: 0;
@@ -4267,6 +4270,10 @@ figure.align-center figcaption {
   @media (min-width: 1050px) {
     .home-talking-about__description {
       padding: 0 80px; } }
+
+@media (max-width: 599px) {
+  .mobile-break {
+    display: block; } }
 
 .page-node-type-narrow-page .field-content-panel {
   grid-column: 3 / -3; }
@@ -4348,7 +4355,7 @@ figure.align-center figcaption {
     font-weight: 500;
     font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
     font-size: 32px;
-    line-height: 1;
+    line-height: 1.25;
     letter-spacing: -0.6px;
     color: #052049;
     margin-bottom: 32px; }
@@ -4448,7 +4455,7 @@ figure.align-center figcaption {
     font-weight: 500;
     font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
     font-size: 32px;
-    line-height: 1;
+    line-height: 1.25;
     letter-spacing: -0.6px;
     color: #052049;
     font-family: "GranjonLTW01-Roman", Garamond, "Times New Roman", serif;
@@ -4640,7 +4647,7 @@ figure.align-center figcaption {
   font-weight: 500;
   font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
   font-size: 32px;
-  line-height: 1;
+  line-height: 1.25;
   letter-spacing: -0.6px;
   color: #052049;
   margin: 0;
@@ -4760,7 +4767,7 @@ a[href*="http"] .article-header__date {
   font-weight: 500;
   font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
   font-size: 32px;
-  line-height: 1;
+  line-height: 1.25;
   letter-spacing: -0.6px;
   color: #052049;
   margin: 0 auto;
@@ -5559,7 +5566,7 @@ a[href*="http"] .article-header__date {
   font-weight: 500;
   font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
   font-size: 32px;
-  line-height: 1;
+  line-height: 1.25;
   letter-spacing: -0.6px;
   color: #052049; }
   @media (min-width: 600px) {
@@ -6745,7 +6752,7 @@ a[href*="http"] .article-header__date {
   font-weight: 500;
   font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
   font-size: 32px;
-  line-height: 1;
+  line-height: 1.25;
   letter-spacing: -0.6px;
   color: #052049;
   padding-bottom: 16px;
@@ -7485,7 +7492,7 @@ a[href*="http"] .article-header__date {
   font-weight: 500;
   font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
   font-size: 32px;
-  line-height: 1;
+  line-height: 1.25;
   letter-spacing: -0.6px;
   color: #052049;
   margin: 0 auto;
@@ -8435,7 +8442,7 @@ h3.twitter_user {
   font-weight: 500;
   font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
   font-size: 32px;
-  line-height: 1;
+  line-height: 1.25;
   letter-spacing: -0.6px;
   color: #052049;
   top: 0;
@@ -12962,7 +12969,7 @@ h3.twitter_user {
       font-weight: 500;
       font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
       font-size: 32px;
-      line-height: 1;
+      line-height: 1.25;
       letter-spacing: -0.6px;
       color: #052049;
       padding-top: 60px;
@@ -13169,7 +13176,7 @@ h3.twitter_user {
           font-weight: 500;
           font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
           font-size: 32px;
-          line-height: 1;
+          line-height: 1.25;
           letter-spacing: -0.6px;
           color: #052049;
           font-family: "GranjonLTW01-Roman", Garamond, "Times New Roman", serif;
@@ -13318,7 +13325,7 @@ h3.twitter_user {
       font-weight: 500;
       font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
       font-size: 32px;
-      line-height: 1;
+      line-height: 1.25;
       letter-spacing: -0.6px;
       color: #052049;
       margin: 0;
@@ -13364,7 +13371,7 @@ h3.twitter_user {
       font-weight: 500;
       font-family: "HelveticaNeueLTW04-45Light", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
       font-size: 32px;
-      line-height: 1;
+      line-height: 1.25;
       letter-spacing: -0.6px;
       color: #052049;
       margin: 0 auto;
