--- a/docroot/themes/custom/ucsf/scss/tools/_mixins-font-styles.scss
+++ b/docroot/themes/custom/ucsf/scss/tools/_mixins-font-styles.scss
@@ -62,7 +62,7 @@
 
   font-family: $font-helvetica-neue-light;
   font-size: 32px;
-  line-height: 1;
+  line-height: 1.25;
   letter-spacing: -0.6px;
   color: $navy;
 
